<resources>
    <string name="app_name">Uurapp</string>
    <string name="menu_settings">Instellingen</string>
    <string name="title_activity_list">Geboekte Uren</string>
    <string name="title_about">Over Uurapp</string>
    <string name="title_register">Registeren</string>
    <string name="title_editentryactivity">Een tijdregel maken of wijzigen</string>    
    <string name="label_autologon">Automatisch aanmelden</string>
    <string name="label_next">Volgende</string>
    <string name="label_previous">Vorige</string>
    <string name="label_login">Inloggen</string>
    <string name="label_finish">Voltooien</string>
    <string name="label_edit">Wijzig</string>
    <string name="label_del">Verwijder</string>
    <string name="label_add">Toevoegen</string>     
    <string name="label_cancel">Annuleren</string>
    <string name="label_today">Vandaag</string>  
    <string name="label_detailOK">OK</string>             
    <string name="subtitle_about">Over Uurapp</string>
    <string name="subtitle_register">Registreren</string>
    <string name="subtitle_list">Geboekte Uren</string>
    <string name="subtitle_date">Datum</string>
    <string name="subtitle_timestart">Starttijd</string>
    <string name="subtitle_timeend">Eindtijd</string>
    <string name="subtitle_hours">Uren</string>
    <string name="subtitle_organization">Klant</string>
    <string name="subtitle_activity">Activiteit</string>
    <string name="subtitle_project">Project</string>
    <string name="subtitle_address">Adres</string>
    <string name="subtitle_description">Omschrijving</string>
    <string name="subtitle_remarks">Opmerking</string>
    <string name="hint_description">Wat heb je gedaan?</string>
    <string name="hint_remarks">Interne opmerking, bijvoorbeeld: \'niet factureren\'</string>
    <string name="hint_username">Inlognaam</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="subtitle_login">Aanmelden</string>
    <string name="headerOrganizationAbbrv">Org.</string>
    <string name="headerOrganization">Organisatie</string>
    <string name="dummyOrganization">Organisatie</string>
    <string name="headerStartTime">Van</string>
    <string name="headerEndTime">Tot</string>
    <string name="headerProjectAbbrv">Proj.</string>
    <string name="headerProject">Project</string>
    <string name="dummyDescription">Dummy Description</string>
    <string name="headerOrgAbbrv">Org.</string>
    <string name="dummyGuid">1AC6809A_E9B0_48FB_9F1A_19E3048A3C9A</string>
    <string name="dummyTRUE">1</string>
    <string name="dummyVersion">Versie 1.00</string>
    <string name="headerActivityAbbrv">Act.</string>
    <string name="headerActivity">Activiteit</string>
    <string name="contentDescriptionLogo">Uurapp Urenfacturatie voor zelfstandigen</string>
    <string name="linkToWebsite">Gebruik samen met www.uurapp.nl</string>
    <string name="menu_delete">Verwijderen</string>
    <string name="menu_edit">Wijzigen</string>
    <string name="menu_about">Over Uurapp</string>
    <string name="label_logoff">Afmelden</string>
    <string name="text_about"><![CDATA[<p>Uurapp is een product van <b>Code54 B.V</b>.<br />Gebruik de app om snel en makkelijk je Uurapp-uren in te voeren op je telefoon.</p>]]></string>
    <string name="nighthours">Bevat nachtelijke uren</string>
    <string name="btnReview">Blij met Uurapp? Plaats een review!</string>
 </resources>