<?xml version="1.0" encoding="utf-8"?>

<!-- This is one row for the listview in activity_list.xml  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
 	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"    
	    android:orientation="horizontal" > 

		<TextView
		    android:id="@+id/rowStart"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:text="@string/headerStartTime"
		    android:textColor="@color/table_row_text"
		    android:width="@dimen/RowStartWidth"
		    android:textSize="@dimen/UurappFontSize" />
		
		<TextView
		    android:id="@+id/rowEnd"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:text="@string/headerEndTime"
		    android:textColor="@color/table_row_text"
		    android:width="@dimen/RowEndWidth"
		    android:textSize="@dimen/UurappFontSize" />
	
		<TextView
		    style="@style/TextViewAbbrv"
		    android:id="@+id/rowOrganizationAbbrv"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_weight=".33"
		    android:layout_width="0dp" 
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:textColor="@color/table_row_text"
		    android:text="@string/headerOrganizationAbbrv"
		    android:textSize="@dimen/UurappFontSize" />
		
		<TextView
		    style="@style/TextViewNonAbbrv"
		    android:id="@+id/rowOrganization"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_weight=".33"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:textColor="@color/table_row_text"
		    android:text="@string/headerOrganization"
		    android:textSize="@dimen/UurappFontSize" />
		
		<TextView
		    style="@style/TextViewAbbrv"
		    android:id="@+id/rowActivityAbbrv"
		    android:layout_weight=".33"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:text="@string/headerActivity"
		    android:textColor="@color/table_row_text"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textSize="@dimen/UurappFontSize" />
		
		<TextView
		    style="@style/TextViewNonAbbrv"
		    android:id="@+id/rowActivity"
		    android:layout_weight=".33"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:text="@string/headerActivity"
		    android:textColor="@color/table_row_text"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textSize="@dimen/UurappFontSize" />
		
		<TextView
		    style="@style/TextViewAbbrv"
		    android:id="@+id/rowProjectAbbrv"
		    android:layout_weight=".33"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:text="@string/headerProjectAbbrv"
		    android:textColor="@color/table_row_text"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textSize="@dimen/UurappFontSize" />
		
		<TextView
		    style="@style/TextViewNonAbbrv"
		    android:id="@+id/rowProject"
		    android:layout_weight=".33"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:text="@string/headerProject"
		    android:textColor="@color/table_row_text"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textSize="@dimen/UurappFontSize" />

	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"    
	    android:orientation="horizontal" >
    
		<TextView
		    android:id="@+id/rowDescription"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:layout_width="fill_parent"
		    android:textColor="@color/table_row_text"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:text="@string/dummyDescription"
		    android:textSize="@dimen/UurappFontSize" />
	</LinearLayout>
</LinearLayout>