<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/containerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutNavigation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightgreen"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/label_cancel"
            android:src="@drawable/navigation_cancel"
            android:layout_marginLeft="@dimen/ButtonMarginLeft"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:layout_marginTop="@dimen/ButtonMarginTop"
            android:layout_marginBottom="@dimen/ButtonMarginBottom" />

        <ImageButton
            android:id="@+id/buttonSelectToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/label_today"
            android:src="@drawable/collections_go_to_today"
            android:layout_marginLeft="@dimen/ButtonMarginLeft"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:layout_marginTop="@dimen/ButtonMarginTop"
            android:layout_marginBottom="@dimen/ButtonMarginBottom" />

        <ImageButton
            android:id="@+id/buttonFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/label_finish"
            android:src="@drawable/content_save"
            android:layout_marginLeft="@dimen/ButtonMarginLeft"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:layout_marginTop="@dimen/ButtonMarginTop"
            android:layout_marginBottom="@dimen/ButtonMarginBottom" />

        <ImageButton
            android:id="@+id/buttonDetailOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/label_detailOK"
            android:src="@drawable/navigation_previous_item"
            android:layout_marginLeft="@dimen/ButtonMarginLeft"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:layout_marginTop="@dimen/ButtonMarginTop"
            android:layout_marginBottom="@dimen/ButtonMarginBottom" />
    </LinearLayout>

</RelativeLayout>