<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@color/white"
                android:contentDescription="@string/contentDescriptionLogo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border" >

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textViewTitleLogin"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_span="3"
                            android:background="@color/darkgreen"
                            android:gravity="center_horizontal"
                            android:paddingBottom="@dimen/SubTitleVerticalPadding"
                            android:paddingTop="@dimen/SubTitleVerticalPadding"
                            android:text="Aanmelden"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white"
                            android:textSize="@dimen/UurappFontSize" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView android:visibility="invisible" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="Inlognaam:"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editTextUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:hint="@string/hint_username"
                            android:inputType="none"
                            android:singleLine="true" >

                            <requestFocus />
                        </EditText>
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView android:visibility="invisible" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="Wachtwoord:"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:ems="10"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView android:visibility="invisible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Margin"
                            android:visibility="invisible" />

                        <CheckBox
                            android:id="@+id/checkBoxAutoLogon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_autologon" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:id="@+id/ButtonFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/SubTitleVerticalPadding" >

                    <Button
                        android:id="@+id/buttonToRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_shape"
                        android:text="Registreren" />

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_shape"
                        android:text="@string/label_login" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewLinkToWebsite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/SubTitleVerticalPadding"
                    android:paddingTop="20dp"
                    android:text="@string/linkToWebsite"
                    android:textSize="10sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>